[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://tiles/board.tres" type="TileSet" id=2]
[ext_resource path="res://tiles/pieces.tres" type="TileSet" id=3]
[ext_resource path="res://scripts/player.gd" type="Script" id=4]
[ext_resource path="res://scenes/AIPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/bg.png" type="Texture" id=6]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 416, 288 )
scale = Vector2( 4.16, 1 )
texture = ExtResource( 6 )

[node name="Board" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 190, 190 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0 )

[node name="Pieces" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 190, 190 )
format = 1

[node name="Player" type="Node" parent="."]
script = ExtResource( 4 )

[node name="AIPlayer" parent="." instance=ExtResource( 5 )]

[node name="Start" type="Button" parent="."]
margin_left = 640.0
margin_top = 192.0
margin_right = 768.0
margin_bottom = 264.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="."]
margin_left = 640.0
margin_top = 328.0
margin_right = 768.0
margin_bottom = 400.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Label" type="Label" parent="."]
margin_left = 608.0
margin_top = 40.0
margin_right = 800.0
margin_bottom = 104.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="curr_turn_changed" from="." to="AIPlayer" method="_on_Game_curr_turn_changed"]
[connection signal="curr_turn_changed" from="." to="Player" method="_on_Game_curr_turn_changed"]
[connection signal="got_game_state" from="." to="AIPlayer" method="_on_Game_got_game_state"]
[connection signal="turn_played" from="Player" to="." method="play_turn"]
[connection signal="turn_played" from="AIPlayer" to="." method="play_turn"]
[connection signal="button_down" from="Start" to="." method="_on_Start_button_down"]
[connection signal="button_down" from="Reset" to="." method="_on_Reset_button_down"]
